--- a/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
@@ -3,14 +3,13 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.control.Button?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             prefWidth="800" prefHeight="600">
@@ -18,29 +17,30 @@
     <!-- Immagine di sfondo a tutto schermo -->
     <ImageView fx:id="backgroundImageView" preserveRatio="true">
         <effect>
-            <GaussianBlur radius="32"/> <!-- Adjust the blur radius as needed -->
+            <GaussianBlur radius="8"/> <!-- Adjust the blur radius as needed -->
         </effect>
-        <Image url="@../img/background4.jpg"/>
+        <Image url="@../img/background5.png"/>
     </ImageView>
 
     <!-- Contenitore principale -->
-    <HBox AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.topAnchor="0">
-        <Region HBox.hgrow="ALWAYS"/>
+    <VBox AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.topAnchor="0" alignment="CENTER" spacing="20">
+
         <!-- Immagine in primo piano sulla parte sinistra -->
-        <VBox alignment="CENTER_LEFT">
-            <ImageView fx:id="imageCodex" fitWidth="500" fitHeight="500">
-                <clip>
-                    <Rectangle arcWidth="20" arcHeight="32" width="500" height="500"/>
-                </clip>
-                <Image url="@../img/codex.png"/>
-            </ImageView>
-        </VBox>
-        <Region HBox.hgrow="ALWAYS"/>
+
+        <ImageView fx:id="imageCodex" fitWidth="500" fitHeight="500">
+            <clip>
+                <Rectangle arcWidth="20" arcHeight="32" width="500" height="500"/>
+            </clip>
+            <Image url="@../img/codex_transparent.png"/>
+        </ImageView>
+
         <!-- Aggiunta del TextField nella parte destra -->
-        <VBox alignment="CENTER_RIGHT" spacing="10">
-            <Label text="Inserisci IP:"/>
-            <TextField fx:id="ipTextField"/>
+        <VBox alignment="CENTER_LEFT" spacing="10" maxWidth="500">
+            <Label text="Server IP:"/>
+            <TextField fx:id="ipTextField" promptText="192.168..." minHeight="48" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
         </VBox>
-        <Region HBox.hgrow="ALWAYS"/>
-    </HBox>
+        <Button text="PLAY" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold"/>
+
+
+    </VBox>
 </AnchorPane>
