--- a/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
@@ -10,9 +10,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Box?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.Region?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            prefWidth="800" prefHeight="600">
+            prefWidth="800" prefHeight="600"
+            fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.MenuController">
 
     <!-- Immagine di sfondo a tutto schermo -->
     <ImageView fx:id="backgroundImageView" preserveRatio="true">
@@ -38,6 +43,32 @@
         <VBox alignment="CENTER_LEFT" spacing="10" maxWidth="500">
             <Label text="Server IP:"/>
             <TextField fx:id="ipTextField" promptText="192.168..." minHeight="48" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
+                <HBox spacing="20">
+                    <Button fx:id="buttonSocket" onAction="#handleButtonSocket" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;" minWidth="240" minHeight="48">
+                        <graphic>
+                            <HBox alignment="CENTER">
+                                <HBox >
+                                    <ImageView fx:id="iconSocket" fitWidth="36" fitHeight="36">
+                                        <Image url="@../img/check.png"/>
+                                    </ImageView>
+                                </HBox>
+                                <Text text="SOCKET"/>
+                                <Region HBox.hgrow="ALWAYS" />
+                            </HBox>
+                        </graphic>
+                    </Button>
+
+                    <Button fx:id="buttonRMI" onAction="#handleButtonRMI" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;" minWidth="240" minHeight="48">
+                        <graphic>
+                            <HBox alignment="CENTER_LEFT" spacing="5">
+                                <ImageView fx:id="iconRMI" fitWidth="36" fitHeight="36" visible="false">
+                                <Image url="@../img/check.png"/>
+                            </ImageView>
+                                <Text text="RMI"/>
+                            </HBox>
+                        </graphic>
+                    </Button>
+                </HBox>
         </VBox>
         <Button text="PLAY" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold"/>
 
