--- a/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.shape.Box?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             prefWidth="800" prefHeight="600"
@@ -41,36 +42,52 @@
 
         <!-- Aggiunta del TextField nella parte destra -->
         <VBox alignment="CENTER_LEFT" spacing="10" maxWidth="500">
-            <Label text="Server IP:"/>
-            <TextField fx:id="ipTextField" promptText="192.168..." minHeight="48" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
-                <HBox spacing="20">
-                    <Button fx:id="buttonSocket" onAction="#handleButtonSocket" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;" minWidth="240" minHeight="48">
+            <HBox spacing="20">
+                <VBox minWidth="380" maxWidth="370">
+                    <Label text="Server IP"/>
+                    <TextField  fx:id="ipTextField" promptText="192.168..." minHeight="48" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
+                </VBox>
+                <VBox minWidth="120" maxWidth="110">
+                    <Label text="Port" style="-fx-padding: 0 0 0 16"/>
+                    <TextField alignment="CENTER" fx:id="portTextField" minHeight="48" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
+                </VBox>
+            </HBox>
+            <HBox spacing="20">
+                    <Button onMouseClicked="#handleButtonSocket" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;" minWidth="240" minHeight="48">
                         <graphic>
-                            <HBox alignment="CENTER">
-                                <HBox >
-                                    <ImageView fx:id="iconSocket" fitWidth="36" fitHeight="36">
-                                        <Image url="@../img/check.png"/>
-                                    </ImageView>
-                                </HBox>
+                            <HBox alignment="CENTER" spacing="10">
+                                <padding>
+                                    <Insets right="16" left="20"/>
+                                </padding>
+                                <ImageView fx:id="iconSocket" fitWidth="36" fitHeight="36">
+                                    <Image url="@../img/check.png"/>
+                                </ImageView>
+
                                 <Text text="SOCKET"/>
-                                <Region HBox.hgrow="ALWAYS" />
+                              <Region minWidth="36" />
                             </HBox>
                         </graphic>
                     </Button>
 
-                    <Button fx:id="buttonRMI" onAction="#handleButtonRMI" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;" minWidth="240" minHeight="48">
+                    <Button onMouseClicked="#handleButtonRMI" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;" minWidth="240" minHeight="48">
                         <graphic>
-                            <HBox alignment="CENTER_LEFT" spacing="5">
+                            <HBox alignment="CENTER" spacing="40">
+                                <padding>
+                                    <Insets right="16" left="16"/>
+                                </padding>
                                 <ImageView fx:id="iconRMI" fitWidth="36" fitHeight="36" visible="false">
-                                <Image url="@../img/check.png"/>
-                            </ImageView>
+                                    <Image url="@../img/check.png"/>
+                                </ImageView>
+
                                 <Text text="RMI"/>
+                                <Region minWidth="36" />
                             </HBox>
                         </graphic>
                     </Button>
                 </HBox>
         </VBox>
-        <Button text="PLAY" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold"/>
+
+        <Button fx:id="playButton" onMouseClicked="#handlePlayButton" text="PLAY" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold"/>
 
 
     </VBox>
