--- a/src/main/resources/it/polimi/ingsw/gc28/gui/createGame.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/createGame.fxml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.effect.GaussianBlur?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.text.Text?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.CreateGameController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="600.0" prefWidth="400.0">
+            fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.CreateGameController"
 
-    <ImageView fx:id="backgroundImageView" preserveRatio="true">
-        <effect>
-            <GaussianBlur radius="8"/>
-        </effect>
-        <Image url="@../img/background5.png"/>
-    </ImageView>
-    <HBox AnchorPane.leftAnchor="32" AnchorPane.topAnchor="32" alignment="CENTER">
-        <VBox onMouseClicked="#onBackArrowClicked">
-            <ImageView   fitWidth="48" fitHeight="48">
-                <Image url="@../img/backarrow.png" />
-            </ImageView>
-        </VBox>
-        <Label  text="Create Game" style="-fx-font-size: 36"/>
-    </HBox>
+    <VBox fx:id="createGameBox" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="450.0">
+        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0" AnchorPane.topAnchor="500.0">
+            <Label style="-fx-padding: 0 0 8 0" text="Number of players" />
+        </HBox>
+        <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0">
+            <Button fx:id="TwoPlayers" minHeight="64" minWidth="200" onMouseClicked="#handleSelectCreateGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+                <graphic>
+                    <HBox alignment="CENTER">
+                        <Text text="2" />
+                    </HBox>
+                </graphic>
+            </Button>
+            <Button fx:id="ThreePlayers" minHeight="64" minWidth="200" onMouseClicked="#handleSelectJoinGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+                <graphic>
+                    <HBox alignment="CENTER">
+                        <Text text="3" />
+                    </HBox>
+                </graphic>
+            </Button>
+            <Button fx:id="FourPlayers" minHeight="64" minWidth="200" onMouseClicked="#handleSelectJoinGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+                <graphic>
+                    <HBox alignment="CENTER">
+                        <Text text="4" />
+                    </HBox>
+                </graphic>
+            </Button>
+        </HBox>
+    </VBox>
+
 
 </AnchorPane>
