--- a/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.layout.Region?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.GamesController">
 
     <ImageView fx:id="backgroundImageView" preserveRatio="true">
@@ -48,26 +49,26 @@
         </HBox>
     </VBox>
 
-    <VBox fx:id="createGameBox" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="450.0">
+    <VBox fx:id="createGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="450.0" alignment="CENTER">
         <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0" AnchorPane.topAnchor="500.0">
             <Label style="-fx-padding: 0 0 8 0" text="Number of players" />
         </HBox>
         <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0">
-            <Button fx:id="TwoPlayers" minHeight="64" minWidth="200" onMouseClicked="#handleSelectTwoPlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+            <Button fx:id="TwoPlayersButton" minHeight="64" minWidth="200" onMouseClicked="#handleSelectTwoPlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER">
                         <Text text="2" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button fx:id="ThreePlayers" minHeight="64" minWidth="200" onMouseClicked="#handleSelectJoinGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+            <Button fx:id="ThreePlayersButton" minHeight="64" minWidth="200" onMouseClicked="#handleSelectThreePlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER">
                         <Text text="3" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button fx:id="FourPlayers" minHeight="64" minWidth="200" onMouseClicked="#handleSelectJoinGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+            <Button fx:id="FourPlayersButton" minHeight="64" minWidth="200" onMouseClicked="#handleSelectFourPlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER">
                         <Text text="4" />
@@ -75,6 +76,23 @@
                 </graphic>
             </Button>
         </HBox>
+        <Region>
+            <minHeight>150.0</minHeight>
+        </Region>
+        <Button fx:id="createButton" onMouseClicked="#handleCreateButton" prefHeight="64.0" prefWidth="322.0" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold" text="CREATE" layoutX="300" layoutY="300"/>
+    </VBox>
+
+    <VBox fx:id="joinGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="450.0" alignment="CENTER">
+        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0" AnchorPane.topAnchor="500.0">
+            <VBox alignment="CENTER">
+                <Label style="-fx-padding: 32 0 0 0" text="Game ID" />
+                <TextField fx:id="gameIdTextField" minHeight="64" prefWidth="700" promptText="Insert game ID..." style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
+            </VBox>
+        </HBox>
+        <Region>
+            <minHeight>158.0</minHeight>
+        </Region>
+        <Button fx:id="joinButton" onMouseClicked="#handleCreateButton" prefHeight="64.0" prefWidth="322.0" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold" text="JOIN" layoutX="300" layoutY="300"/>
     </VBox>
 
 </AnchorPane>
