--- a/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
@@ -3,35 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.GaussianBlur?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.layout.Region?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.GamesController">
-
-    <ImageView fx:id="backgroundImageView" preserveRatio="true">
-        <effect>
-            <GaussianBlur radius="8" /> <!-- Adjust the blur radius as needed -->
-        </effect>
-        <Image url="@../img/background5.png" />
-    </ImageView>
-    <HBox alignment="CENTER" AnchorPane.leftAnchor="32" AnchorPane.topAnchor="32">
-        <VBox onMouseClicked="#onBackArrowClicked">
-            <ImageView fitHeight="48" fitWidth="48">
-                <Image url="@../img/backarrow.png" />
-            </ImageView>
-        </VBox>
-        <Label style="-fx-font-size: 36" text="Games" />
-    </HBox>
-    <VBox AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="120">
+<AnchorPane  xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.GamesController"  AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" prefWidth="2000" prefHeight="800">
+    <VBox AnchorPane.leftAnchor="32" AnchorPane.topAnchor="32" AnchorPane.rightAnchor="32" alignment="CENTER_LEFT">
         <Label style="-fx-padding: 0 0 8 0" text="Username" />
         <TextField fx:id="usernameTextField" minHeight="48" promptText="Tell me your beautiful name..." style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
-        <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0">
+        <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0" AnchorPane.leftAnchor="32" AnchorPane.topAnchor="32" AnchorPane.rightAnchor="32">
             <Button fx:id="createGameButton" minHeight="64" minWidth="300" onMouseClicked="#handleSelectCreateGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER">
@@ -49,8 +31,8 @@
         </HBox>
     </VBox>
 
-    <VBox fx:id="createGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="450.0" alignment="CENTER">
-        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0" AnchorPane.topAnchor="500.0">
+    <VBox fx:id="createGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="350.0" alignment="CENTER">
+        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0">
             <Label style="-fx-padding: 0 0 8 0" text="Number of players" />
         </HBox>
         <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0">
@@ -82,8 +64,8 @@
         <Button fx:id="createButton" onMouseClicked="#handleCreateButton" prefHeight="64.0" prefWidth="322.0" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold" text="CREATE" layoutX="300" layoutY="300"/>
     </VBox>
 
-    <VBox fx:id="joinGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="450.0" alignment="CENTER">
-        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0" AnchorPane.topAnchor="500.0">
+    <VBox fx:id="joinGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="350" alignment="CENTER">
+        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0">
             <VBox alignment="CENTER">
                 <Label style="-fx-padding: 32 0 0 0" text="Game ID" />
                 <TextField fx:id="gameIdTextField" minHeight="64" prefWidth="700" promptText="Insert game ID..." style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
