--- a/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/menu.fxml
@@ -15,10 +15,11 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.geometry.Insets?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefWidth="800" prefHeight="600"
-            fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.MenuController">
+<?import javafx.scene.layout.StackPane?>
+<StackPane xmlns="http://javafx.com/javafx"
+           xmlns:fx="http://javafx.com/fxml"
+           prefWidth="800" prefHeight="600"
+           fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.MenuController">
 
     <!-- Immagine di sfondo a tutto schermo -->
     <ImageView fx:id="backgroundImageView" preserveRatio="true">
@@ -89,4 +90,4 @@
 
         <Button fx:id="playButton" onMouseClicked="#handlePlayButton" text="PLAY" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold"/>
     </VBox>
-</AnchorPane>
+</StackPane>
