--- a/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
@@ -9,72 +9,32 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.layout.Region?>
-<AnchorPane  xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.GamesController"  AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" prefWidth="2000" prefHeight="800">
+<?import javafx.scene.layout.Pane?>
+<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.GamesController" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" prefWidth="2000" prefHeight="800">
     <VBox AnchorPane.leftAnchor="32" AnchorPane.topAnchor="32" AnchorPane.rightAnchor="32" alignment="CENTER_LEFT">
         <Label style="-fx-padding: 0 0 8 0" text="Username" />
-        <TextField fx:id="usernameTextField" minHeight="48" promptText="Tell me your beautiful name..." style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
+        <TextField fx:id="userNameTextField" minHeight="48" promptText="Tell me your beautiful name..." style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
         <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0" AnchorPane.leftAnchor="32" AnchorPane.topAnchor="32" AnchorPane.rightAnchor="32">
-            <Button fx:id="createGameButton" minHeight="64" minWidth="300" onMouseClicked="#handleSelectCreateGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+            <Button fx:id="createGameButton" minHeight="64" minWidth="300" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER">
                         <Text text="CREATE GAME" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button fx:id="joinGameButton" minHeight="64" minWidth="300" onMouseClicked="#handleSelectJoinGame" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
+            <Button fx:id="joinGameButton" minHeight="64" minWidth="300" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER">
                         <Text text="JOIN GAME" />
                     </HBox>
                 </graphic>
             </Button>
+
         </HBox>
     </VBox>
 
-    <VBox fx:id="createGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="350.0" alignment="CENTER">
-        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0">
-            <Label style="-fx-padding: 0 0 8 0" text="Number of players" />
-        </HBox>
-        <HBox alignment="CENTER" spacing="64" style="-fx-padding: 32 0 0 0">
-            <Button fx:id="TwoPlayersButton" minHeight="64" minWidth="200" onMouseClicked="#handleSelectTwoPlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
-                <graphic>
-                    <HBox alignment="CENTER">
-                        <Text text="2" />
-                    </HBox>
-                </graphic>
-            </Button>
-            <Button fx:id="ThreePlayersButton" minHeight="64" minWidth="200" onMouseClicked="#handleSelectThreePlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
-                <graphic>
-                    <HBox alignment="CENTER">
-                        <Text text="3" />
-                    </HBox>
-                </graphic>
-            </Button>
-            <Button fx:id="FourPlayersButton" minHeight="64" minWidth="200" onMouseClicked="#handleSelectFourPlayers" style="-fx-background-color: #EDEDED;-fx-background-radius: 16;">
-                <graphic>
-                    <HBox alignment="CENTER">
-                        <Text text="4" />
-                    </HBox>
-                </graphic>
-            </Button>
-        </HBox>
-        <Region>
-            <minHeight>150.0</minHeight>
-        </Region>
-        <Button fx:id="createButton" onMouseClicked="#handleCreateButton" prefHeight="64.0" prefWidth="322.0" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold" text="CREATE" layoutX="300" layoutY="300"/>
-    </VBox>
 
-    <VBox fx:id="joinGameBox" prefHeight="256.0" prefWidth="1312.0" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="350" alignment="CENTER">
-        <HBox alignment="CENTER" AnchorPane.leftAnchor="550.0">
-            <VBox alignment="CENTER">
-                <Label style="-fx-padding: 32 0 0 0" text="Game ID" />
-                <TextField fx:id="gameIdTextField" minHeight="64" prefWidth="700" promptText="Insert game ID..." style="-fx-background-color: #EDEDED;-fx-background-radius: 16;-fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);" />
-            </VBox>
-        </HBox>
-        <Region>
-            <minHeight>158.0</minHeight>
-        </Region>
-        <Button fx:id="joinButton" onMouseClicked="#handleJoinButton" prefHeight="64.0" prefWidth="322.0" style="-fx-background-color: transparent;-fx-font-size: 24pt; -fx-font-weight: bold" text="JOIN" layoutX="300" layoutY="300"/>
-    </VBox>
+    <Pane fx:id="subView" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="350" style="-fx-background-color: red"/>
+
 
 </AnchorPane>
