--- a/src/main/resources/it/polimi/ingsw/gc28/gui/wrapper.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/wrapper.fxml
@@ -30,7 +30,7 @@
                 <Image url="@../img/backarrow.png" />
             </ImageView>
         </VBox>
-        <Label style="-fx-font-size: 36" text="Games" />
+        <Label fx:id="labelGoBack" style="-fx-font-size: 36" text="Games" />
     </HBox>
     <HBox AnchorPane.topAnchor="64" fx:id="innerContent"  AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
     <SnackBar AnchorPane.rightAnchor="32" />
