--- a/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/games.fxml
@@ -31,5 +31,5 @@
 
         </HBox>
     </VBox>
-    <Pane fx:id="subView" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="350"/>
+    <AnchorPane fx:id="subView" AnchorPane.leftAnchor="64" AnchorPane.rightAnchor="64" AnchorPane.topAnchor="240"/>
 </AnchorPane>
