--- a/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
@@ -1,81 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.InGameController"
-            AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0"
-            fx:id="outerPane">
+
+<?import javafx.scene.control.Label?>
+<AnchorPane fx:id="outerPane" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gc28.view.gui.controllers.InGameController">
 <!--    style="-fx-background-color: red"-->
 
-    <HBox AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0">
+    <HBox AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0">
         <padding>
-            <Insets top="16" bottom="16" right="32" left="32"/>
+            <Insets bottom="16" left="32" right="32" top="16" />
         </padding>
         <VBox spacing="16">
-            <Button onMouseClicked="#handleTablePress"  style="-fx-background-color: #484848;-fx-background-radius: 16;" minWidth="280" minHeight="48">
+            <Button minHeight="48" minWidth="280" onMouseClicked="#handleTablePress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
-                            <Insets right="16" left="20"/>
+                            <Insets left="20" right="16" />
                         </padding>
-                        <Text text="Table" fill="white" style="-fx-text-fill: white"/>
+                        <Text fill="white" style="-fx-text-fill: white" text="Table" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button onMouseClicked="#handleDecksPress"   style="-fx-background-color: #484848;-fx-background-radius: 16;" minWidth="280" minHeight="48">
+            <Button minHeight="48" minWidth="280" onMouseClicked="#handleDecksPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
-                            <Insets right="16" left="20"/>
+                            <Insets left="20" right="16" />
                         </padding>
-                        <Text fill="white" text="Decks"/>
+                        <Text fill="white" text="Decks" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button onMouseClicked="#handleScoreboardPress"  style="-fx-background-color: #484848;-fx-background-radius: 16;" minWidth="280" minHeight="48">
+            <Button minHeight="48" minWidth="280" onMouseClicked="#handleScoreboardPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
-                            <Insets right="16" left="20"/>
+                            <Insets left="20" right="16" />
                         </padding>
                         <Text fill="white" text="Scoreboard" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button onMouseClicked="#handleChatPress"  style="-fx-background-color: #484848;-fx-background-radius: 16;" minWidth="280" minHeight="48">
+            <Button minHeight="48" minWidth="280" onMouseClicked="#handleChatPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
-                            <Insets right="16" left="20"/>
+                            <Insets left="20" right="16" />
                         </padding>
                         <Text fill="white" text="Chat" />
                     </HBox>
                 </graphic>
             </Button>
-            <Button onMouseClicked="#handleQuitPress"  style="-fx-background-color: #484848;-fx-background-radius: 16;" minWidth="280" minHeight="48">
+            <Button minHeight="48" minWidth="280" onMouseClicked="#handleQuitPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
-                            <Insets right="16" left="20"/>
+                            <Insets left="20" right="16" />
                         </padding>
                         <Text fill="white" text="Quit Game" />
                     </HBox>
                 </graphic>
             </Button>
         </VBox>
-        <Region VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/>
+        <Region HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" />
     </HBox>
-    <HBox fx:id="innerContent" AnchorPane.leftAnchor="216" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="200"/>
+    <HBox fx:id="innerContent" AnchorPane.leftAnchor="216" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="200" />
 
-    <HBox AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" HBox.hgrow="ALWAYS" style="-fx-background-color: blue" prefHeight="200">
-        <Region HBox.hgrow="ALWAYS"/>
+    <HBox fx:id="cards" prefHeight="200" AnchorPane.bottomAnchor="16" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" HBox.hgrow="ALWAYS">
+        <Pane prefWidth="70" />
+        <VBox alignment="CENTER" spacing="10" style="-fx-background-color: #EDEDED;-fx-background-radius: 16">
+            <Label text="Objective" style="-fx-text-fill: #484848; -fx-font-size: 18px;" />
+            <HBox alignment="CENTER_LEFT" prefWidth="200" spacing="80">
+                <Pane prefWidth="50" />
+                <StackPane>
+                    <Rectangle arcHeight="20" arcWidth="20" fill="#484848" height="140.0" width="200.0" />
+                    <ImageView fitHeight="180.0" fitWidth="180.0" preserveRatio="true">
+                        <Image url="@../img/cards/fronts/GOLD_38.png"/>
+                    </ImageView>
+                </StackPane>
+                <Pane prefWidth="20" />
+            </HBox>
+            <Pane prefWidth="70" />
+        </VBox>
+        <Region HBox.hgrow="ALWAYS" />
+        <VBox alignment="CENTER" spacing="10" style="-fx-background-color: #EDEDED;-fx-background-radius: 16">
+            <Label text="Your hand" style="-fx-text-fill: #484848; -fx-font-size: 18px;" />
+
+            <HBox alignment="CENTER" prefWidth="200" spacing="80">
+                <Pane prefWidth="50" />
+                <StackPane>
+                    <Rectangle arcHeight="20" arcWidth="20" fill="#484848" height="140.0" width="200.0" />
+                    <ImageView fitHeight="180.0" fitWidth="180.0" preserveRatio="true">
+                        <Image url="@../img/cards/fronts/GOLD_1.png"/>
+                    </ImageView>
+                </StackPane>
+                <StackPane>
+                    <Rectangle arcHeight="20" arcWidth="20" fill="#484848" height="140.0" width="200.0" />
+                    <ImageView fitHeight="180.0" fitWidth="180.0" preserveRatio="true">
+                        <Image url="@../img/cards/fronts/OBJ_1.png"/>
+                    </ImageView>
+                </StackPane>
+                <StackPane>
+                    <Rectangle arcHeight="20" arcWidth="20" fill="#484848" height="140.0" width="200.0" />
+                    <ImageView fitHeight="180.0" fitWidth="180.0" preserveRatio="true">
+                        <Image url="@../img/cards/fronts/INI_2.png"/>
+                    </ImageView>
+                </StackPane>
+                <Pane prefWidth="20" />
+            </HBox>
+        </VBox>
+        <Pane prefWidth="70" />
     </HBox>
 </AnchorPane>
