--- a/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
@@ -42,7 +42,7 @@
                     </HBox>
                 </graphic>
             </Button>
-            <Button minHeight="48" minWidth="280" onMouseClicked="#handleScoreboardPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
+            <Button fx:id="scoreboardButton" minHeight="48" minWidth="280" onMouseClicked="#handleScoreboardPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
