SnackBar smaller width PlayerStatus

--- a/src/main/resources/it/polimi/ingsw/gc28/gui/components/snackbar/snackbar.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/components/snackbar/snackbar.fxml
@@ -7,6 +7,5 @@
          stylesheets="@styles.css"
          type="javafx.scene.layout.VBox">
 
-    <AnchorPane fx:id="wrapper" prefWidth="800">
-    </AnchorPane>
+    <AnchorPane fx:id="wrapper" prefWidth="800"/>
 </fx:root>
